--- a/src/CNN.ipynb
+++ b/src/CNN.ipynb
@@ -54,13 +54,13 @@
     "NUM_CHANNELS = 3 # RGB images\n",
     "PIXEL_DEPTH = 255\n",
     "NUM_LABELS = 2\n",
-    "TRAINING_SIZE = 10\n",
+    "TRAINING_SIZE = 100\n",
     "TESTING_SIZE = 50\n",
     "VALIDATION_SIZE = 10  # Size of the validation set.\n",
     "\n",
     "BATCH_SIZE = 16 \n",
-    "NUM_EPOCHS = 1\n",
-    "MAX_AUG = 1\n",
+    "NUM_EPOCHS = 100\n",
+    "MAX_AUG = 2\n",
     "IMG_PATCH_SIZE = 16\n",
     "CONTEXT_SIZE = 16\n",
     "NOISE_LEVEL = 0.006\n",
@@ -118,7 +118,10 @@
       "Directory  ../data/training/augmented/images  already exists, overwritten\n",
       "Directory  ../data/training/augmented/groundtruth  already exists, overwritten\n",
       "Loading test images\n",
-      "\n"
+      "\n",
+      "Train data shape:  (12500, 48, 48, 3)\n",
+      "Train labels shape:  (12500, 2)\n",
+      "Test data shape:  (14440, 48, 48, 3)\n"
      ]
     }
    ],
@@ -170,7 +173,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Class weights:  [0.70772521 1.70351302]\n"
+      "Class weights:  [0.70185289 1.73852573]\n"
      ]
     }
    ],
@@ -321,17 +324,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 11250 samples, validate on 6250 samples\n",
+      "Train on 12500 samples, validate on 1875 samples\n",
       "Epoch 1/1\n",
-      "11250/11250 [==============================] - 209s 19ms/step - loss: 0.5140 - acc: 0.7345 - val_loss: 0.4916 - val_acc: 0.7738\n",
+      "12500/12500 [==============================] - 189s 15ms/step - loss: 0.4900 - acc: 0.7528 - val_loss: 0.3638 - val_acc: 0.8384\n",
       "\n",
-      "Epoch 00001: val_acc improved from -inf to 0.77376, saving model to ../weights/chechpoint.weights.unet.hdf5\n"
+      "Epoch 00001: val_acc improved from -inf to 0.83840, saving model to ../weights/chechpoint.weights.cnn.hdf5\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0xd268642b0>"
+       "<keras.callbacks.History at 0xd2d9d3a90>"
       ]
      },
      "execution_count": 8,
@@ -359,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -383,14 +386,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating submission...\n"
+      "Creating submission...\n",
+      "10 % done\n",
+      "20 % done\n",
+      "30 % done\n",
+      "40 % done\n",
+      "50 % done\n",
+      "60 % done\n",
+      "70 % done\n",
+      "80 % done\n",
+      "90 % done\n",
+      "100 % done\n"
      ]
     }
    ],
@@ -423,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -452,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -462,21 +475,7 @@
     "id": "eLZKheQk3C4j",
     "outputId": "f23956e8-1a0c-46b4-afa7-0ad0c9affba8"
    },
-   "outputs": [
-    {
-     "ename": "error",
-     "evalue": "OpenCV(3.4.4) /Users/travis/build/skvark/opencv-python/opencv/modules/core/src/matrix.cpp:757: error: (-215:Assertion failed) dims <= 2 && step[0] > 0 in function 'locateROI'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-45a66a0e0f23>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpost_processed_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mTESTING_SIZE\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mp_img\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_pred_postprocessed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpred_test_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'test'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mIMG_PATCH_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpostprocess_path\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"gt_pred_pp_\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".png\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mp_img\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp_img\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/Skole/Samfundet/src/cnn_pred.py\u001b[0m in \u001b[0;36mget_pred_postprocessed\u001b[0;34m(filename, image_idx, datatype, IMG_PATCH_SIZE)\u001b[0m\n\u001b[1;32m    222\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_filename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIMREAD_GRAYSCALE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 224\u001b[0;31m     \u001b[0mp_img\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpost_process\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    225\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    226\u001b[0m     \u001b[0mlabel_patches\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg_crop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIMG_PATCH_SIZE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIMG_PATCH_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/Skole/Samfundet/src/data_extraction.py\u001b[0m in \u001b[0;36mpost_process\u001b[0;34m(img)\u001b[0m\n\u001b[1;32m    435\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mpost_process\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    436\u001b[0m     \u001b[0mkernel1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetStructuringElement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMORPH_RECT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m33\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 437\u001b[0;31m     \u001b[0mkernel2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetStructuringElement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMORPH_RECT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m33\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    438\u001b[0m     \u001b[0mkernel3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetStructuringElement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMORPH_RECT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m17\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    439\u001b[0m     \u001b[0mkernel4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetStructuringElement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMORPH_RECT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m17\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31merror\u001b[0m: OpenCV(3.4.4) /Users/travis/build/skvark/opencv-python/opencv/modules/core/src/matrix.cpp:757: error: (-215:Assertion failed) dims <= 2 && step[0] > 0 in function 'locateROI'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not os.path.isdir(postprocess_path):\n",
     "    os.mkdir(postprocess_path)\n",
@@ -485,7 +484,7 @@
     "for i in range(1,TESTING_SIZE+1): \n",
     "    p_img = get_pred_postprocessed(pred_test_path, i, 'test',IMG_PATCH_SIZE)\n",
     "    filename = postprocess_path + \"gt_pred_pp_\" + str(i) + \".png\"\n",
-    "    p_img = np.array(p_img)\n",
+    "    p_img = np.asarray(p_img)\n",
     "    p_img = np.multiply(p_img,255.0)\n",
     "    p_img = Image.fromarray(p_img)\n",
     "    post_img = p_img.convert('RGB')\n",
@@ -510,9 +509,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission file created, saved at ../submission.csv\n"
+     ]
+    }
+   ],
    "source": [
     "masks_to_submission(pp_submission_path, *post_processed_list)\n",
     "print('Submission file created, saved at', submission_path)"
