--- a/src/CNN.ipynb
+++ b/src/CNN.ipynb
@@ -522,7 +522,7 @@
    ],
    "source": [
     "masks_to_submission(pp_submission_path, *post_processed_list)\n",
-    "print('Submission file created, saved at', submission_path)"
+    "print('Submission file created, saved at', pp_submission_path)"
    ]
   }
  ],
