--- a/src/CNN.ipynb
+++ b/src/CNN.ipynb
@@ -126,7 +126,8 @@
     }
    ],
    "source": [
-    "x_train, y_train, x_test, x_val, y_val = load_data_context(train_data_filename, train_labels_filename, test_data_filename, TRAINING_SIZE, VALIDATION_SIZE, IMG_PATCH_SIZE, CONTEXT_SIZE, TESTING_SIZE,\n",
+    "x_train, y_train, x_test, x_val, y_val = load_data_context(train_data_filename, train_labels_filename,\n",
+    "          test_data_filename, TRAINING_SIZE, VALIDATION_SIZE, IMG_PATCH_SIZE, CONTEXT_SIZE, TESTING_SIZE,\n",
     "          saltpepper = NOISE_LEVEL, augment=True, MAX_AUG=MAX_AUG, augImgDir=aug_img_path , data_dir=data_dir, groundTruthDir =aug_gt_path, newaugment=True)"
    ]
   },
